# tcl_reference_system

reference_tcl_interface/: CMakeLists.txt  package.xml
reference_tcl_interface/include/reference_tcl_interface/: reference_tcl_interface.hpp
reference_tcl_interface/src/: reference_tcl_interface.cpp
tcl_reference_interfaces/: CMakeLists.txt  package.xml
tcl_reference_system/: CMakeLists.txt  package.xml
tcl_reference_system/config/: test_case1_config.py  test_case2_config.py  test_case3_config.py
tcl_reference_system/include/tcl_reference_system/: spin_node.hpp  spin_node_component.hpp  spin_node_main.hpp  spin_some_node.hpp  timer_node.hpp
tcl_reference_system/launch/: test_case1.launch.py  test_case2.launch.py  test_case3.launch.py
tcl_reference_system/param/: test_case1.param.yaml  test_case2.param.yaml  test_case3.param.yaml
tcl_reference_system/src/: spin_node.cpp  spin_node_component.cpp  spin_node_main.cpp  spin_some_node.cpp  timer_node.cpp
tcl_reference_system_msg/: CMakeLists.txt  package.xml
tcl_reference_system_msg/msg/: DynamicMessage.msg  TCLDynamicMessage.msg
