<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reference_tcl_interface</name>
  <version>0.1.0</version>
  <description>The Autoware and Timing Coordination Interface package</description>
  <maintainer email="sethut1224@gmail.com">Taeho Han</maintainer>
  <license>Apache License 2.0</license>

  <author email="sethut1224@gmail.com">Taeho Han</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>autoware_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>tcl_std_msgs</depend>
  <depend>tcl_reference_system_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
